# courseapi-scraper

./: .flake8  .gitignore  .gitpod.Dockerfile  .gitpod.yml  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt  scrapy.cfg
.github/workflows/: code-quality-check.yml  codeql-analysis.yml
ocw/: ckip.py  items.py  middlewares.py  pipelines.py  settings.py
ocw/spiders/: Scraper.py  ewant.py  mooc.py  moocs.py  ntu.py  openedu.py  sharecourse.py  tocec.py
src/ocw/ocw/: items.py  middlewares.py  pipelines.py  settings.py
src/ocw/ocw/spiders/: Scraper.py  ntu.py  openedu.py  tocec.py
