[tool.poetry]
name = "scraper"
version = "0.1.0"
description = "CourseAPI 開放式課程資訊匯流學院的爬蟲"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.5.1"
pymongo = "^3.12.1"
loguru = "^0.5.3"
pydantic = "^1.8.2"

pandas = { version = "^1.3.4", optional = true }

[tool.poetry.extras]
csv = ["pandas"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
