[tool.poetry]
name = "courseapi-scraper"
version = "0.2.0"
description = "CourseAPI 開放式課程資訊匯流學院的爬蟲"
authors = ["台灣開放教育推動團隊 <toedu@googlegroups.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://toedu.g0v.tw"
repository = "https://github.com/Open-Edu-Tw/Scraper"
keywords = [
    "scrapy",
    "courseapi",
    "scraper",
    "open"
]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.6.1"
pymongo = "^4.0.2"
pydantic = "^1.9.0"

pandas = "^1.4.1"

[tool.poetry.extras]
csv = ["pandas"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
