[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
name = "courseapi-scraper"
description = "CourseAPI 開放式課程資訊匯流學院的爬蟲"
authors = [
  { name = "台灣開放教育推動團隊", email = "toedu@googlegroups.com>"}
]
license = { text = "MIT" }
readme = "README.md"
keywords = [
    "scrapy",
    "courseapi",
    "scraper",
    "open"
]
requires-python = ">=3.10,<3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "Scrapy>=2.6.2",
    "pymongo>=4.2.0",
    "pydantic>=1.9.2",
    "torch>=1.12.1+cpu",
    "ckip-transformers>=0.3.2",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/Open-Edu-Tw/courseapi-scraper#readme"
Issues = "https://github.com/Open-Edu-Tw/courseapi-scraper/issues"
Source = "https://github.com/Open-Edu-Tw/courseapi-scraper"

[project.optional-dependencies]
csv = [
    "pandas>=1.4.3",
]

[tool.pdm.dev-dependencies]
style = ["flake8", "black", "isort"]

[tool.pdm]
version = {from = "ocw/__init__.py"}

[tool.pdm.scripts]
crawl = "scrapy crawl"
check = { shell = "flake8 . && black --check --diff . && isort --check-only --diff ." }
fmt = { shell = "isort . && black . && pdm run check" }

[[tool.pdm.source]]
url = "https://download.pytorch.org/whl/cpu"
verify_ssl = true
name = "pytorch"
